# TradocFlow

./: .gitignore  COMPILATION_FIXES_SUMMARY.md  Cargo.toml  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_EDITOR_IMPLEMENTATION.md  MULTI_LANGUAGE_IMPORT_GUIDE.md  MULTI_LANGUAGE_MANUAL_IMPORT.md  PHASE_2_1_IMPLEMENTATION.md  SENTENCE_ALIGNMENT_SYSTEM.md  SIDEBAR_ENHANCEMENT_SUMMARY.md  SYNCHRONIZED_SCROLLING_IMPLEMENTATION.md  WORD_IMPORT_IMPLEMENTATION.md  minimal_test  saved_document.md  standalone_markdown_test.rs  test_document.md  test_markdown_service.rs  tradocflow.db
docs/: KANBAN_GIT_SYNC.md
locales/: es.yml  fr.yml  nl.yml
simple_markdown_editor_standalone/: Cargo.toml  test_markdown.md
simple_markdown_editor_standalone/src/: main.rs
simple_markdown_editor_standalone/ui/: main.slint
src/: document_import_service.rs  i18n.rs  lib.rs  main.rs  notification_system.rs  test_i18n.rs
src/agents/: mod.rs  quality_agent.rs
src/database/: kanban_repository.rs  member_repository.rs  migrations.rs  mod.rs  project_repository.rs  translation_progress_repository.rs
src/export_engine/: mod.rs
src/git_integration/: comment_system.rs  commit_builder.rs  diff_tools.rs  kanban_sync.rs  mod.rs  models.rs  session_manager.rs  task_manager.rs  (+3 more)
tradocflow-core/: .gitignore  ALIGNMENT_CONFIDENCE_SYSTEM.md  BASIC_MARKDOWN_EDITOR_COMPLETE.md  CURSOR_BLINKING_IMPLEMENTATION.md  Cargo.toml  ENHANCED_MARKDOWN_FORMATTING.md  MARKDOWN_RIBBON_DOCUMENTATION.md  TRANSLATION_MEMORY_INTEGRATION_SUMMARY.md  build.rs  simple_chunk_test  simple_markdown_test  standalone_markdown_test  test_enhanced_formatting.rs
tradocflow-core/locales/: de.yml  en.yml  it.yml
tradocflow-core/src/: lib.rs  notification_system.rs
tradocflow-core/src/agents/: terminology_agent.rs  translation_agent.rs
tradocflow-core/src/database/: member_repository.rs  project_repository.rs
tradocflow-core/src/export_engine/: default.css
tradocflow-core/src/git_integration/: comment_system.rs  commit_builder.rs  kanban_sync.rs  task_manager.rs  toml_tests.rs
tradocflow-core/src/gui/: alignment_confidence_bridge.rs  app.rs  client.rs  collaboration_bridge.rs  enhanced_formatting_functions.rs  focus_management_bridge.rs  main_window_focus_bridge.rs  markdown_editor_bridge.rs  mod.rs  ribbon_callback_implementations.rs  translation_memory_bridge.rs
tradocflow-core/src/integration/: bell_tower_integration.rs  mod.rs
tradocflow-core/src/integration_tests/: focus_management_integration_test.rs  mod.rs
tradocflow-core/src/models/: member.rs  mod.rs  project.rs  project_browser.rs  project_template.rs  translation_progress.rs
tradocflow-core/src/services/: alignment_api_service.rs  alignment_cache_service.rs  alignment_integration_tests.rs  background_alignment_processor.rs  chunk_linking_service.rs  chunk_processor.rs  collaborative_editing_service_tests.rs  concurrent_text_operations_manager.rs  document_import_service.rs  document_processing.rs  document_state_manager.rs  enhanced_batch_processor.rs  enhanced_multi_language_detector.rs  enhanced_pdf_service.rs  export_service.rs  focus_management_service.rs  language_syntax_service.rs  markdown_advanced_features.rs  markdown_editor_integration.rs  markdown_integration_example.rs  markdown_performance_optimizer.rs  markdown_processor.rs  markdown_text_processor.rs  mod.rs  multi_editor_performance_coordinator.rs  multi_language_manual_import.rs  multi_pane_alignment_service.rs  pdf_export_service.rs  performance_optimizer.rs  permission_service.rs  project_manager.rs  resource_pooling_cache_service.rs  sentence_alignment_service.rs  simple_pdf_export.rs  simplified_document_import_service.rs  text_structure_analyzer.rs  translation_memory_adapter.rs  translation_memory_integration_service.rs  translation_memory_integration_test.rs  translation_service.rs
tradocflow-core/src/ui/: main.slint  main_backup.slint  markdown_editor_integration.rs
tradocflow-core/src/ui/components/: alignment_confidence_indicator.slint  alignment_correction_tools.slint  alignment_feedback_overlay.slint  chunk_linking_panel.slint  collaboration_panel.slint  editor_pane.slint  enhanced_multi_pane_editor.slint  enhanced_split_pane_editor.slint  enhanced_text_editor.slint  focus_management.slint  language_selector.slint  markdown_ribbon.slint  menubar.slint  multi_language_import_dialog.slint  pane_header.slint  pane_header_showcase.slint  pdf_export_dialog.slint  project_browser.slint  project_card.slint  scroll_controls.slint  scroll_coordinator.slint  scroll_synchronizer.slint  sidebar.slint  synchronized_scroll_container.slint  team_management_panel.slint  translation_memory_panel.slint
tradocflow-core/src/ui/integration_examples/: alignment_confidence_integration.rs  mod.rs  multi_language_import_integration.rs  synchronized_scrolling_example.slint
tradocflow-core/src/ui/styles/: default.slint
tradocflow-core/src/ui/tests/: split_pane_editor_tests.rs
tradocflow-core/web/kanban/: kanban.js  styles.css  test.html
tradocflow-translation-memory/: Cargo.toml  README_REST_API.md  compile_final.txt  compile_output.txt  test_api.sh
tradocflow-translation-memory/docs/: api_documentation.md
tradocflow-translation-memory/examples/: storage_demo.rs
tradocflow-translation-memory/src/: error.rs  lib.rs
tradocflow-translation-memory/src/api/: handlers.rs  middleware_auth.rs  mod.rs  models.rs
tradocflow-translation-memory/src/models/: chunk.rs  common.rs  mod.rs  terminology.rs  translation_unit.rs
tradocflow-translation-memory/src/services/: highlighting.rs  mod.rs  terminology.rs  translation_memory.rs
tradocflow-translation-memory/src/storage/: chunk_manager.rs  duckdb_manager.rs  mod.rs  parquet_manager.rs  traits.rs
tradocflow-translation-memory/src/tests/: error_tests.rs  integration_tests.rs  mod.rs  performance_tests.rs  service_tests.rs  storage_tests.rs  test_utils.rs
tradocflow-translation-memory/src/utils/: csv_processor.rs  mod.rs
tradocflow-translation-memory/tests/: integration_tests.rs  terminology_tests.rs  translation_memory_tests.rs
(+69 files in other folders)
