[workspace]
members = [
    "tradocflow-core",
    "tradocflow-translation-memory",
]

resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0"

# Database dependencies
duckdb = { version = "1.3", features = ["bundled"] }
arrow = { version = "52.0", features = ["prettyprint"] }
parquet = { version = "52.0", features = ["arrow", "async"] }
csv = "1.3"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Testing
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = "thin"  # Use thin LTO instead of full LTO to reduce memory usage
codegen-units = 4  # Increase codegen-units to reduce memory pressure
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1  # Reduce debug info level to save memory during compilation
incremental = true

# Memory-optimized profile for development on resource-constrained systems
[profile.dev-memory]
inherits = "dev"  
debug = 0  # No debug info
incremental = true
codegen-units = 16  # More parallel compilation, less memory per unit